--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/home.css">
-    <title>Document</title>
+    <title>Seed Sprout Styleguide</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <header>
             <div class="navBar_container">
                 <div class="navBar_logo_container">
-                    <img src="../public/logo/Logo.svg" width="50" />
+                    <img src="../public/logo/Logo.svg" width="30" />
                 </div>
                 <div class="navBar_links_container">
                     <a class="navBar_links" href="./index.html">
@@ -48,6 +48,7 @@
             </div>
             <div class="body_content_logo_container">
                 <img class="body_content_logo" src="../public/logo/Logo.svg" />
+                <div class="logo_shadow"></div>
             </div>
         </div>
     </main>
