--- a/pages/logo.html
+++ b/pages/logo.html
@@ -10,55 +10,60 @@
 </head>
 
 <body>
-   
-        <!--Nav Bar-->
-        <header>
-            <div class="navBar_container">
-                <div class="navBar_logo_container">
-                    <img src="../public/logo/Logo.svg" width="30" />
-                </div>
-                <div class="navBar_links_container">
-                    <a class="navBar_links" href="./index.html">
-                        <h1>Home</h1>
-                    </a>
-                    <a class="navBar_links" href="./logo.html">
-                        <h1>Logo</h1>
-                    </a>
-                    <a class="navBar_links" href="./typography.html">
-                        <h1>Typography</h1>
-                    </a>
-                    <a class="navBar_links" href="./colorPalette.html">
-                        <h1>Color Palette</h1>
-                    </a>
-                    <a class="navBar_links" href="./iconsAndGraphics.html">
-                        <h1>Icons and Graphics</h1>
-                    </a>
-                </div>
-            </div>
-        </header>
 
-        <!--body content-->
-        <div class="body_container">
+    <!--Nav Bar-->
+    <header>
+        <div class="navBar_container">
+            <div class="navBar_logo_container">
+                <img src="../public/logo/Logo.svg" width="30" />
+            </div>
+            <div class="navBar_links_container">
+                <a class="navBar_links" href="./index.html">
+                    <h1>Home</h1>
+                </a>
+                <a class="navBar_links" href="./logo.html">
+                    <h1>Logo</h1>
+                </a>
+                <a class="navBar_links" href="./typography.html">
+                    <h1>Typography</h1>
+                </a>
+                <a class="navBar_links" href="./colorPalette.html">
+                    <h1>Color Palette</h1>
+                </a>
+                <a class="navBar_links" href="./iconsAndGraphics.html">
+                    <h1>Icons and Graphics</h1>
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <!--body content-->
+    <div class="body_container">
+        <div class="intro_container">
+        <div class="intro_wrapper">
             <div class="logo_text_container">
                 <h1 class="logo_text_h1">Logo</h1>
             </div>
-            <div class="logo_desc_wrapper">
-                <div class="intro_desc_container">
-                    <div class="intro_text_container">
-                        <h4 class="intro_text_h4">Seed Sprout's most recognizable aspect, our logo allows users<br> to
-                            instatly recognize us and lets
-                            Seed Sprout convey <br> emotion and meaning all within a glance.</h4>
-                    </div>
-                    <div class="intro_subtext_container">
-                        <h6 class="intro_subtext_h6">In this page you will see how our logo is used, the "do-nots",
-                            <br>and different variations.</h6>
-                    </div>
-                    <div class="intro_arrow_container">
-                        <img src="../public/icons/downarrow.svg" height="125" alt="">
-                    </div>
+            <div class="intro_desc_container">
+                <div class="intro_text_container">
+                    <h4 class="intro_text_h4">Seed Sprout's most recognizable aspect, our logo allows users<br> to
+                        instatly recognize us and lets
+                        Seed Sprout convey <br> emotion and meaning all within a glance.</h4>
+                </div>
+                <div class="intro_subtext_container">
+                    <h6 class="intro_subtext_h6">In this page you will see how our logo is used, the "do-nots",
+                        <br>and different variations.
+                    </h6>
                 </div>
             </div>
         </div>
-  
+
+        <div class="intro_arrow_container">
+            <img src="../public/icons/downarrow.svg" height="125" alt="">
+        </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
