adjusted nav bar and added code to logo page

--- a/pages/logo.html
+++ b/pages/logo.html
@@ -38,31 +38,59 @@
     </header>
 
     <!--body content-->
-    <div class="body_container">
-        <div class="intro_container">
-        <div class="intro_wrapper">
+    <section class="intro_section" id="page1">
+        <div class="introduction">
             <div class="logo_text_container">
                 <h1 class="logo_text_h1">Logo</h1>
             </div>
-            <div class="intro_desc_container">
-                <div class="intro_text_container">
-                    <h4 class="intro_text_h4">Seed Sprout's most recognizable aspect, our logo allows users<br> to
+            <div class="intro_description_container">
+                <div class="intro_text_wrapper">
+                    <h4 class="intro_text_h4">Seed Sprout's most recognizable aspect, our logo allows users<br>
+                        to
                         instatly recognize us and lets
                         Seed Sprout convey <br> emotion and meaning all within a glance.</h4>
-                </div>
-                <div class="intro_subtext_container">
                     <h6 class="intro_subtext_h6">In this page you will see how our logo is used, the "do-nots",
                         <br>and different variations.
                     </h6>
+                    <div class="intro_arrow_container">
+                        <a href="#page2"> <img src="../public/icons/downarrow.svg" height="135" alt="" /></a>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
 
-        <div class="intro_arrow_container">
-            <img src="../public/icons/downarrow.svg" height="125" alt="">
+    <section class="primary_logo" id="page2">
+        <div class="p-logo_container">
+            <div class="p-logo_text_container">
+                <h1>Primary Logos</h1>
+                <h2>Design</h2>
+                <p>Our logo represents our brand, ideas, and message.</p>
+                <p>The logo consists of a plant sprouting from a seed. You can also see the way the sprout has grown is
+                    in the shape of an S</p>
+                    <p>We decided to use Philosopher as the typeface of the logo as we felt its personality matched well with the style of the logo. The pointy serifs ressemble the ends of leafs, giving the font an organic but impactful look to it.</p>
+                <h2>Clear Space</h2>
+                <p>In order to reinforce our brand, it is important to provide clear space around our logo.<br> The minimum
+                    clear space around the logo is 50 pixels</p>
+            </div>
+            <div class="p-logo_logo_container">
+                <div class="p-logo_colored_logo_container">
+                    <h3>Coloured</h3>
+                    <img class="p-logo_images" src="../public/logo/coloured-vertical-typeface.png"/>
+                </div>
+                <div class="p-logo_colored_logo_container">
+                    <h3>Monochromatic</h3>
+                    <img src="../public/logo/mono-vertical-typeface.png"/>
+                </div>
+                <div class="p-logo_colored_logo_container">
+                    <img src="../public/logo/clearSpace-coloured-vertical-typeface.png"/>
+                </div>
+                <div class="p-logo_colored_logo_container">
+                    
+                </div> 
+            </div>
         </div>
-        </div>
-    </div>
+    </section>
 
 </body>
 
