finished primary/vetical logo seciton

--- a/pages/logo.html
+++ b/pages/logo.html
@@ -38,14 +38,14 @@
     </header>
 
     <!--body content-->
-    <section class="intro_section" id="page1">
+    <section class="intro_section" id="introduction">
         <div class="introduction">
             <div class="logo_text_container">
                 <h1 class="logo_text_h1">Logo</h1>
             </div>
             <div class="intro_description_container">
                 <div class="intro_text_wrapper">
-                    <h4 class="intro_text_h4">Seed Sprout's most recognizable aspect, our logo allows users<br>
+                    <h4 class="intro_text_h4">Seed Sprout's most recognizable aspect, our logo, allows users<br>
                         to
                         instatly recognize us and lets
                         Seed Sprout convey <br> emotion and meaning all within a glance.</h4>
@@ -53,42 +53,63 @@
                         <br>and different variations.
                     </h6>
                     <div class="intro_arrow_container">
-                        <a href="#page2"> <img src="../public/icons/downarrow.svg" height="135" alt="" /></a>
+                        <a href="#primary"> <img src="../public/icons/downarrow.svg" height="135" alt="" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="primary_logo" id="page2">
+    <section class="primary_logo" id="primary">
         <div class="p-logo_container">
             <div class="p-logo_text_container">
-                <h1>Primary Logos</h1>
-                <h2>Design</h2>
-                <p>Our logo represents our brand, ideas, and message.</p>
-                <p>The logo consists of a plant sprouting from a seed. You can also see the way the sprout has grown is
-                    in the shape of an S</p>
-                    <p>We decided to use Philosopher as the typeface of the logo as we felt its personality matched well with the style of the logo. The pointy serifs ressemble the ends of leafs, giving the font an organic but impactful look to it.</p>
-                <h2>Clear Space</h2>
-                <p>In order to reinforce our brand, it is important to provide clear space around our logo.<br> The minimum
+                <h1 class="p-logo_h1">Vertical Logo</h1>
+                <h2 class="p-logo_h2">Design</h2>
+                <p class="p-logo_p">Our logo represents our brand, ideas, and message.</p>
+                <p class="p-logo_p">The logo consists of a plant sprouting from a seed. You can also see the way the
+                    sprout has grown is
+                    in the shape of an S.</p>
+                <p class="p-logo_p">We decided to use Philosopher as the typeface of the logo as we felt its personality
+                    matched well
+                    with the style of the logo. The pointy serifs ressemble the ends of leafs, giving the font an
+                    organic but impactful look to it.</p>
+                <h2 class="p-logo_h2">Clear Space</h2>
+                <p class="p-logo_p">In order to reinforce our brand, it is important to provide clear space around our
+                    logo.<br> The
+                    minimum
                     clear space around the logo is 50 pixels</p>
+                <div class="p-logo_arrow_container">
+                    <a href="#horizontal"> <img src="../public/icons/downarrow.svg" height="135" alt="" /></a>
+                </div>
             </div>
             <div class="p-logo_logo_container">
-                <div class="p-logo_colored_logo_container">
-                    <h3>Coloured</h3>
-                    <img class="p-logo_images" src="../public/logo/coloured-vertical-typeface.png"/>
+                <div class="p-logo_top_container">
+                    <div class="p-logo_colored_logo_container">
+                        <h3 class="p-logo_h3">Coloured</h3>
+                        <img src="../public/logo/coloured-vertical-typeface.png" />
+                    </div>
+                    <div class="p-logo_mono_logo_container">
+                        <h3 class="p-logo_h3">Monochromatic</h3>
+                        <img src="../public/logo/mono-vertical-typeface.png" />
+                    </div>
                 </div>
-                <div class="p-logo_colored_logo_container">
-                    <h3>Monochromatic</h3>
-                    <img src="../public/logo/mono-vertical-typeface.png"/>
+                <div class="p-logo_bottom_container">
+                    <div class="p-logo_clearSpace_logo_container">
+                        <h3 class="p-logo_h3">Clear Spacing</h3>
+                        <img src="../public/logo/clearSpace-coloured-vertical-typeface.png" />
+                    </div>
+                    <div class="p-logo_minimumSpacing_container">
+                        <h3 class="p-logo_h3">Minimum Size</h3>
+                        <img src="../public/logo/minimumSpacing-coloured-typeface.png" />
+                    </div>
                 </div>
-                <div class="p-logo_colored_logo_container">
-                    <img src="../public/logo/clearSpace-coloured-vertical-typeface.png"/>
-                </div>
-                <div class="p-logo_colored_logo_container">
-                    
-                </div> 
             </div>
+        </div>
+    </section>
+
+    <section class="horizontal_logo" id="horizontal">
+        <div class="h-logo_container">
+
         </div>
     </section>
 
