color initial commit

--- a/pages/colorPalette.html
+++ b/pages/colorPalette.html
@@ -5,88 +5,148 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/color.css">
     <title>Document</title>
 </head>
 
 <body>
     <main class="main">
-    <header>
-        <div class="navBar_container">
-            <div class="navBar_logo_container">
-                <img src="../public/logo/Logo.svg" width="30" />
+        <header>
+            <div class="navBar_container">
+                <div class="navBar_logo_container">
+                    <img src="../public/logo/Logo.svg" width="30" />
+                </div>
+                <div class="navBar_links_container">
+                    <a class="navBar_links" href="./index.html">
+                        <h1>Home</h1>
+                    </a>
+                    <a class="navBar_links" href="./logo.html">
+                        <h1>Logo</h1>
+                    </a>
+                    <a class="navBar_links" href="./typography.html">
+                        <h1>Typography</h1>
+                    </a>
+                    <a class="navBar_links" href="./colorPalette.html">
+                        <h1>Color Palette</h1>
+                    </a>
+                    <a class="navBar_links" href="./iconsAndGraphics.html">
+                        <h1>Icons and Graphics</h1>
+                    </a>
+                </div>
             </div>
-            <div class="navBar_links_container">
-                <a class="navBar_links" href="./index.html">
-                    <h1>Home</h1>
-                </a>
-                <a class="navBar_links" href="./logo.html">
-                    <h1>Logo</h1>
-                </a>
-                <a class="navBar_links" href="./typography.html">
-                    <h1>Typography</h1>
-                </a>
-                <a class="navBar_links" href="./colorPalette.html">
-                    <h1>Color Palette</h1>
-                </a>
-                <a class="navBar_links" href="./iconsAndGraphics.html">
-                    <h1>Icons and Graphics</h1>
-                </a>
-            </div>
-        </div>
-    </header>
+        </header>
 
-    <div>
-        <h1 class="color_text_h1">Color Palette</h1>
-    </div>
-
-    <div class="colors-container">
-        <div class="left-color-container">
-            <div class=" forest-box-size">
-                <div class="color-forestgreen"></div>
-                <h6>#3B9545<br>
-                    Forest Green</h6>
-            </div>
-            <div class=" mantis-box-size">
-                <div class="color-mantisgreen"></div>
-                <h6>#5FBF6A<br>
-                    Mantris Green</h6>
-            </div>
-            <div class=" calpoly-box-size">
-                <div class="color-calpolygreen"></div>
-                <h6>#1D4923<br>
-                    Cal Poly Green</h6>
-            </div>
-            <div class=" orange-box-size">
-                <div class="color-darkorange"></div>
-                <h6>#FF8800<br>
-                    Dark Orange</h6>
-            </div>
+        <div class="text_color_palette">
+            <h1 class="color_text_h1">Color Palette</h1>
         </div>
-        <div class="right-color-container">
-            <div class=" choco-box-size">
-                <div class="color-chocolate-brown"></div>
-                <h6>#844D0B<br>
-                    Chocolate Brown</h6>
-            </div>
-            <div class=" sepia-box-size">
-                <div class="color-sepia-brown"></div>
-                <h6>#603808<br>
-                    Sepia Brown</h6>
-            </div>
-            <div class=" bistre-box-size">
-                <div class="color-bistre-brown"></div>
-                <h6>#392105<br>
-                    Bistre Brown</h6>
-            </div>
-            <div class=" azure-box-size">
-                <div class="color-azure-blue"></div>
-                <h6>#4F86F7<br>
-                    Azure Blue</h6>
-            </div>
-        </div>
+        <br>
+        <h2 style="margin-top: 10vh">Our Colors</h2>
+        <br>
+        <div class="colors-container">
 
-    </div>
+            <div class="left-color-container">
+                <div class=" forest-box-size">
+                    <div class="color-forestgreen"></div>
+                    <h6>#3B9545<br>
+                        Forest Green</h6>
+                </div>
+                <div class=" mantis-box-size">
+                    <div class="color-mantisgreen"></div>
+                    <h6>#5FBF6A<br>
+                        Mantris Green</h6>
+                </div>
+                <div class=" calpoly-box-size">
+                    <div class="color-calpolygreen"></div>
+                    <h6>#1D4923<br>
+                        Cal Poly Green</h6>
+                </div>
+                <div class=" orange-box-size">
+                    <div class="color-darkorange"></div>
+                    <h6>#FF8800<br>
+                        Dark Orange</h6>
+                </div>
+            </div>
+            <div class="right-color-container">
+                <div class=" choco-box-size">
+                    <div class="color-chocolate-brown"></div>
+                    <h6>#844D0B<br>
+                        Chocolate Brown</h6>
+                </div>
+                <div class=" sepia-box-size">
+                    <div class="color-sepia-brown"></div>
+                    <h6>#603808<br>
+                        Sepia Brown</h6>
+                </div>
+                <div class=" bistre-box-size">
+                    <div class="color-bistre-brown"></div>
+                    <h6>#392105<br>
+                        Bistre Brown</h6>
+                </div>
+                <div class=" azure-box-size">
+                    <div class="color-azure-blue"></div>
+                    <h6>#4F86F7<br>
+                        Azure Blue</h6>
+                </div>
+            </div>
+
+        </div>
+        <hr>
+        <h2>Description</h2>
+        <div class="description_main_box">
+            <div class="color_info">
+                <div class="color_info_dot">
+                    <span class="dot" style="background-color:#3B9545 ;"></span>
+                    <span class="dot" style="background-color:#5FBF6A ;"></span>
+                    <span class="dot" style="background-color:#1D4923 ;"></span>
+
+                </div>
+                <div class="color_description">
+                    <p><b>Green( Cal Poly, Mantis, Forest Green) :</b> The color green is associated with nature that
+                        makes
+                        people think of growth. Mixture of two primary colors, blue, which gives the sense of security
+                        and brand trust, and yellow that represent optimism and youthfulness.It is going to be our
+                        primary color.</p>
+                </div>
+            </div>
+            <div class="color_info">
+                <div class="color_info_dot">
+                    <span class="dot" style="background-color:#844D0B ;"></span>
+                    <span class="dot" style="background-color:#603808 ;"></span>
+                    <span class="dot" style="background-color:#392105 ;"></span>
+
+                </div>
+                <div class="color_description">
+                    <p><b>Brown (Sepia, Chocolate, Bistre ): </b>Brown is natural and neutral color and it evokes the
+                        feeling
+                        of warmth, security and earthiness. We will be using it for the buttons, shadows and highlights.
+                    </p>
+                </div>
+            </div>
+
+            <div class="color_info">
+                <div class="color_info_dot">
+                    <span class="dot" style="background-color:#FF8800 ;"></span>
+                </div>
+                <div class="color_description">
+                    <p><b>Dark Orange:</b> Orange color is associated with optimism and enthusiasm. We will be using it
+                        on our
+                        “vegetable” pages. </p>
+                </div>
+            </div>
+
+            <div class="color_info">
+                <div class="color_info_dot">
+                    <span class="dot" style="background-color:#4F86F7 ;"></span>
+                </div>
+                <div class="color_description">
+                    <p><b>Azure Blue: </b>Blue is also associated with inspiration depth, trust and wisdom. We will be
+                        using it on
+                        our” fruit” pages. </p>
+                </div>
+            </div>
+
+
+        </div>
     </main>
 </body>
 
