finished logo page

--- a/pages/logo.html
+++ b/pages/logo.html
@@ -78,9 +78,6 @@
                     logo.<br> The
                     minimum
                     clear space around the logo is 50 pixels</p>
-                <div class="p-logo_arrow_container">
-                    <a href="#horizontal"> <img src="../public/icons/downarrow.svg" height="135" alt="" /></a>
-                </div>
             </div>
             <div class="p-logo_logo_container">
                 <div class="p-logo_top_container">
@@ -102,17 +99,93 @@
                         <h3 class="p-logo_h3">Minimum Size</h3>
                         <img src="../public/logo/minimumSpacing-coloured-typeface.png" />
                     </div>
+
                 </div>
             </div>
+
         </div>
+        <hr class="hr_divider" />
     </section>
 
     <section class="horizontal_logo" id="horizontal">
-        <div class="h-logo_container">
+        <div class="p-logo_container">
+            <div class="p-logo_text_container">
+                <h1 class="p-logo_h1">Horizontal Logo</h1>
+                <p class="p-logo_p">In order to express our logo in different ways, we felt it was also important to add
+                    a horizontal stacked variant of our logo.</p>
+            </div>
+            <div class="p-logo_logo_container">
+                <div class="p-logo_top_container">
+                    <div class="p-logo_colored_logo_container">
+                        <h3 class="p-logo_h3">Coloured</h3>
+                        <img src="../public/logo/coloured-horizontal.png" />
+                    </div>
+                    <div class="p-logo_mono_logo_container">
+                        <h3 class="p-logo_h3">Monochromatic</h3>
+                        <img src="../public/logo/mono-horizontal.png" />
+                    </div>
+                </div>
+                <div class="p-logo_bottom_container">
+                    <div class="p-logo_clearSpace_logo_container">
+                        <h3 class="p-logo_h3">Clear Spacing</h3>
+                        <img src="../public/logo/horizontal-min-spacing.png" />
+                    </div>
+                    <div class="p-logo_minimumSpacing_container">
+                        <h3 class="p-logo_h3">Minimum Size</h3>
+                        <img src="../public/logo/horizontal-min-size.png" />
+                    </div>
 
+                </div>
+            </div>
         </div>
+        <hr class="hr_divider" />
     </section>
 
+    <section class="logo-dont" id="dont">
+        <div class="p-logo_container">
+            <div class="p-logo_text_container">
+                <h1 class="p-logo_h1">Logo Never-Do's</h1>
+                <p class="p-logo_p">To ensure consistency and to avoid misrepresentation of our logo, these are ways we
+                    do not allow our logo to appear.</p>
+                <div class="arrow_container">
+                    <a href="#introduction"> <img src="../public/icons/uparrow.svg" height="135" alt="" /></a>
+                </div>
+            </div>
+            <div class="p-logo_logo_container">
+                <div class="p-logo_top_container">
+                    <div class="p-logo_colored_logo_container">
+                        <h3 class="p-logo_h3">Do not rotate.</h3>
+                        <img src="../public/logo/coloured-rotate.png" />
+                    </div>
+                    <div class="p-logo_mono_logo_container">
+                        <h3 class="p-logo_h3">Do not rotate.</h3>
+                        <img src="../public/logo/mono-stretch.png" />
+                    </div>
+                </div>
+                <div class="p-logo_mid_container">
+                    <div class="p-logo_clearSpace_logo_container">
+                        <h3 class="p-logo_h3">Do not miscolour.</h3>
+                        <img src="../public/logo/coloured-wrong.png" />
+                    </div>
+                    <div class="p-logo_minimumSpacing_container">
+                        <h3 class="p-logo_h3">Do not misrepresent.</h3>
+                        <img src="../public/logo/coloured-wrongTwo.png" />
+                    </div>
+                </div>
+                <div class="p-logo_bottom_container">
+                    <div class="p-logo_clearSpace_logo_container">
+                        <h3 class="p-logo_h3">Do not set the<br>background green.</h3>
+                        <img src="../public/logo/coloured-noContrast.png" />
+                    </div>
+                    <div class="p-logo_minimumSpacing_container">
+                        <h3 class="p-logo_h3">Do not set the<br>background black.</h3>
+                        <img src="../public/logo/mono-noContrast.png" />
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
