added favicons and titles

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/home.css">
-    <title>Seed Sprout Styleguide</title>
+    <link rel="icon" type="image/x-icon" href="../public/logo/favicon.svg">
+    <title>Seed Sprout Styleguide - Home</title>
 </head>
 
 <body>
