--- a/pages/logo.html
+++ b/pages/logo.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/logo.css">
-    <title>Seed Sprout Styleguide</title>
+    <link rel="icon" type="image/x-icon" href="../public/logo/favicon.svg">
+    <title>Seed Sprout Styleguide - Logo</title>
+    
 </head>
 
 <body>
@@ -158,7 +160,7 @@
                         <img src="../public/logo/coloured-rotate.png" />
                     </div>
                     <div class="p-logo_mono_logo_container">
-                        <h3 class="p-logo_h3">Do not rotate.</h3>
+                        <h3 class="p-logo_h3">Do not stretch.</h3>
                         <img src="../public/logo/mono-stretch.png" />
                     </div>
                 </div>
@@ -174,11 +176,11 @@
                 </div>
                 <div class="p-logo_bottom_container">
                     <div class="p-logo_clearSpace_logo_container">
-                        <h3 class="p-logo_h3">Do not set the<br>background green.</h3>
+                        <h3 class="p-logo_h3">Do not place on<br>green background.</h3>
                         <img src="../public/logo/coloured-noContrast.png" />
                     </div>
                     <div class="p-logo_minimumSpacing_container">
-                        <h3 class="p-logo_h3">Do not set the<br>background black.</h3>
+                        <h3 class="p-logo_h3">Do not place on<br>black background.</h3>
                         <img src="../public/logo/mono-noContrast.png" />
                     </div>
                 </div>
