--- a/pages/colorPalette.html
+++ b/pages/colorPalette.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/color.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="../public/logo/favicon.svg">
+    <title>Seed Sprout Style Guide - Color Palette</title>
 </head>
 
 <body>
