another commit with backgroundcolor add

--- a/pages/colorPalette.html
+++ b/pages/colorPalette.html
@@ -96,9 +96,11 @@
         <div class="description_main_box">
             <div class="color_info">
                 <div class="color_info_dot">
+                    <span class="dot" style="background-color:#EBFFEE ;"></span>
                     <span class="dot" style="background-color:#3B9545 ;"></span>
                     <span class="dot" style="background-color:#5FBF6A ;"></span>
                     <span class="dot" style="background-color:#1D4923 ;"></span>
+
 
                 </div>
                 <div class="color_description">
@@ -146,7 +148,14 @@
                 </div>
             </div>
 
-
+                <div>
+                    <h2>Background Color</h2>
+                    <div class=" azure-box-size">
+                        <div class="color-azure-blue"></div>
+                        <h6>#4F86F7<br>
+                            Azure Blue</h6>
+                    </div>
+                </div>
         </div>
     </main>
 </body>
