more description for color

--- a/pages/colorPalette.html
+++ b/pages/colorPalette.html
@@ -148,14 +148,83 @@
                 </div>
             </div>
 
-                <div>
-                    <h2>Background Color</h2>
+            <div>
+                <h2>Background Color</h2>
+                <div class=" mantis-light-box-size">
+                    <div class="color-mantris-light-blue"></div>
+                    <h6>#EBFFEE<br>
+                        Mantris
+                        10% Opacity</h6>
+                </div>
+            </div>
+            <br>
+            <h2>Button Color</h2>
+            <div class="button-list">
+                <div class="button-left-list">
+                    <h4 class="normal">Normal</h4>
+                    <div class="normal-1">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+
+                    <div class="normal-2">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+
+                    <div class="normal-3">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+
+                    <div class="normal-4">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                </div>
+                <div class="button-middle-list">
+                    <h4 class="normal">On Hover</h4>
+                    <div class="normal-5">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                    <div class="normal-6">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                    <div class="normal-7">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                    <div class="normal-8">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                </div>
+
+                <div class="button-right-list">
+                    <h4 class="normal">Active</h4>
+                    <div class="normal-9">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                    <div class="normal-10">
+                        <h4 class="name-button">Button</h4>
+                    </div>
+                </div>
+            </div>
+            <h2>Color Selections</h2>
+            <div class="veg-fruits-box">
+                <div class="veg-color">
+                    <div class=" orange-box-size">
+                        <div class="color-darkorange"></div>
+                        <h6>#FF8800<br>
+                            Dark Orange</h6>
+                    </div>
+                    <h2>Vegetable Section</h2>
+                </div>
+                <div class="veg-color">
                     <div class=" azure-box-size">
                         <div class="color-azure-blue"></div>
                         <h6>#4F86F7<br>
                             Azure Blue</h6>
                     </div>
+                    <h2>Fruit Selection</h2>
                 </div>
+            </div>
+
+
         </div>
     </main>
 </body>
