--- a/pages/iconsAndGraphics.html
+++ b/pages/iconsAndGraphics.html
@@ -37,7 +37,72 @@
         </div>
     </header>
 
+    <div class="body_container">
+        <div class="introduction">
+            <div class="logo_text_container">
+                <h1 class="intro_text_h1">Icons and <br>Graphics</h1>
+            </div>
+            <div class="intro_description_container">
+                <div class="intro_text_wrapper">
+                    <h4 class="intro_text_h4">Seed Sprout utilizes unique vector graphics<br>and real life images to
+                        create
+                        a fun and accurate<br> visual representation.</h4>
+                    <h6 class="intro_subtext_h6">In this page you will see how we use icons, vector graphics,<br>and
+                        images
+                        in Seed Sprout.</h6>
+                </div>
+            </div>
+        </div>
 
+        <div class="content_container">
+            <div class="icons_graphics_images_container">
+                <div class="graphics_container">
+                    <h1 class="igi_h1">Graphics</h1>
+                    <div class="graphics_wrapper">
+                        <img src="/public/graphics/largeGarden.svg" alt="">
+                        <img src="/public/graphics/smallGarden.svg" alt="">
+                        <img src="/public/graphics/wateringCan.svg" alt="">
+                        <img src="/public/graphics/strawberry.svg" alt="">
+                        <img src="/public/graphics/blueberry.svg" alt="">
+                        <img src="/public/graphics/lemon.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="images_container">
+                    <h1 class="igi_h1">Images</h1>
+                    <div class="images_wrapper">
+                        <img class="rl_img" src="/public/images/carrotRealLife.jpeg" alt="">
+                        <img class="rl_img" src="/public/images/strawberryRealLife.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="div">
+                <div class="interface_icons_container">
+                    <h1 class="igi_h1">Interface Icons</h1>
+                    <div class="ui_icons_wrapper">
+                        <img  src="/public/icons/home.svg" alt="">
+                        <img  src="/public/icons/quizPage.svg" alt="">
+                        <img  src="/public/icons/aboutUs.svg" alt="">
+                        <img  src="/public/icons/backArrow.svg" alt="">
+                        <img src="/public/icons/info.svg" alt="">
+                        <img  src="/public/icons/takeQuiz.svg" alt="">
+                        <img  src="/public/icons/history.svg" alt="">
+                    </div>
+                </div>
+                <div class="text_container">
+                    <p class="igi_p_text">At Seed Sprout, we use a blend of graphics and images to create an accurent and stylish aesthetic.
+                        We use imagery when we show users what result they get when they take the quiz, in order to give an accurate representation
+                        of what the actual fruit or vegetable might look like.
+                        <br>
+                        The interface icons will be used in the navigation bar along with text for easy recogniction and scanability.
+                </p>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 
 </body>
 
