--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
             <div class="text_container">
                 <div class="text_content">
                     <h1 class="home_content_headerOne">A Complete Web <br>Styleguide</h1>
-                    <h4 class="home_content_headerFour">An overview of how Seed Sprout's <br> brand came to be</h4>
+                    <h4 class="home_content_headerFour">An overview of how Seed Sprout's <br> brand came to be.</h4>
                     <p class="home_content_p">By Jenny, Madhu, and Neema</p>
                 </div>
             </div>
